# security-verifiers

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  Makefile  PRD.md  README-PRIME.md  README.md  SUITE_V1_CHECKLIST.md  SVBENCH.md  SVBENCH_STATUS.md  VERSIONING.md  WARP.md  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_all_tests.py  verify_imports.py
baselines/: README.md
bench/: __init__.py  changelog.md  compare_rewards.py  report.py  run_manifest.py
configs/: endpoints.py  endpoints.toml
docs/: GATED_DATASETS.md  (+22 more)
environments/sv-env-code-exec-safety/: README.md  pyproject.toml
environments/sv-env-code-exec-safety/src/sv_env_code_exec_safety/: __init__.py  interfaces.py  skeletons.py
environments/sv-env-config-verification/: DATA_CARD.md  PLAN.md  README-DEV.md  README.md  env.py  mapping.py  oracle.py  patching.py  pyproject.toml  reward.py  schema.py  sv_env_config_verification.py  sv_env_config_verification_test.py
environments/sv-env-config-verification/adapters/: kubelinter_adapter.py  opa_adapter.py  semgrep_adapter.py
environments/sv-env-config-verification/baselines/: tools_only.py
environments/sv-env-config-verification/ci/: e2_verify_rules.yml
environments/sv-env-config-verification/data/: k8s-demo.jsonl  sampling-demo.json  sampling-e2-v1.json  terraform-demo.jsonl  tools-versions.json
environments/sv-env-config-verification/dataset/oracle/: bad_pod.json  bad_tf.json
environments/sv-env-config-verification/policies/: README.md
environments/sv-env-config-verification/src/sv_env_config_verification/: __init__.py  environment.py  interfaces.py  main.py  verifier.py
environments/sv-env-config-verification/sv_env_config_verification/: __init__.py
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/: README.md  env.py  mapping.py  oracle.py  patching.py  reward.py  schema.py
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/adapters/: kubelinter_adapter.py  opa_adapter.py  types.py
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/baselines/: llm_explainer.py  tools_only.py
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/ci/: e2_verify_rules.yml  versions.txt
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/dataset/fixtures/k8s/: bad_pod.yaml
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/dataset/oracle/: bad_tf.json
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/docker/: Dockerfile.e2
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/policies/: README.md  kubernetes_security.rego  lib.rego  terraform_lib.rego  terraform_security.rego
environments/sv-env-config-verification/sv_env_config_verification/e2_config_auditing/tests/: kubelinter_adapter_test.py  mapping_test.py  opa_adapter_test.py  oracle_stability_test.py  patching_test.py  reward_test.py  schema_test.py
environments/sv-env-config-verification/tests/: test_config_verification.py  test_main.py
environments/sv-env-netlogs-judge/: README.md  pyproject.toml  sv_env_network_logs_judge_test.py  sv_netlogs_judge.py  sv_netlogs_judge_impl.py  sv_netlogs_judge_test.py
environments/sv-env-network-logs/: DATA_CARD.md  PLAN.md  README-DEV.md  README.md  pyproject.toml  sv_env_network_logs.py  sv_env_network_logs_judge.py  sv_env_network_logs_judge_test.py  sv_env_network_logs_test.py
environments/sv-env-network-logs/data/: cic-ids-2017-demo.jsonl  cic-ids-2017-ood-test.jsonl  iot23-demo.jsonl  iot23-train-dev-test-test.jsonl  sampling-demo.json  sampling-e1-ood-v1.json  sampling-iot23-v1.json  unsw-nb15-demo.jsonl  unsw-nb15-ood-test.jsonl
environments/sv-env-network-logs/src/sv_env_network_logs/: __init__.py  environment.py  interfaces.py  main.py  skeletons.py  verifier.py
environments/sv-env-network-logs/tests/: test_main.py  test_network_logs.py
environments/sv-env-network-safety/: README.md  pyproject.toml
environments/sv-env-network-safety/src/sv_env_network_safety/: __init__.py  interfaces.py  skeletons.py
environments/sv-env-phishing-detection/: README.md  pyproject.toml  sv_env_phishing_detection.py  sv_env_phishing_detection_test.py
environments/sv-env-phishing-detection/src/sv_env_phishing_detection/: __init__.py  environment.py  interfaces.py  main.py  verifier.py
environments/sv-env-phishing-detection/tests/: test_main.py  test_phishing_detection.py
environments/sv-env-policy-compliance/: README.md  pyproject.toml
environments/sv-env-policy-compliance/src/sv_env_policy_compliance/: __init__.py  interfaces.py  skeletons.py
environments/sv-env-prompt-injection/: README.md  pyproject.toml
environments/sv-env-prompt-injection/src/sv_env_prompt_injection/: __init__.py  interfaces.py  skeletons.py
environments/sv-env-redteam-attack/: README.md  pyproject.toml  sv_env_redteam_attack.py  sv_env_redteam_attack_test.py
environments/sv-env-redteam-attack/src/sv_env_redteam_attack/: __init__.py  environment.py  interfaces.py  main.py  skeletons.py  verifier.py
environments/sv-env-redteam-attack/tests/: test_main.py  test_redteam_attack.py
environments/sv-env-redteam-defense/: README.md  pyproject.toml  sv_env_redteam_defense.py  sv_env_redteam_defense_test.py
environments/sv-env-redteam-defense/src/sv_env_redteam_defense/: __init__.py  environment.py  interfaces.py  main.py  verifier.py
environments/sv-env-redteam-defense/tests/: test_main.py  test_redteam_defense.py
environments/sv-env-secrets-leakage/: README.md  pyproject.toml
environments/sv-env-secrets-leakage/src/sv_env_secrets_leakage/: __init__.py  interfaces.py  skeletons.py
sv_shared/: __init__.py  dataset_loader.py  dataset_loader_test.py  parsers.py  parsers_test.py  pyproject.toml  rendering.py  rewards.py  rollout_logging.py  sandbox_runner.py  tool_runner.py  utils.py  utils_test.py
(+309 files in other folders)
