[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers"
version = "0.0.0"
description = "Security Verifiers monorepo: shared tooling config (no runtime)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "wandb>=0.17.0",
    "weave>=0.50.0",
]

[tool.setuptools]
packages = []  # This is a monorepo root, no packages to include

[tool.ruff]
target-version = "py312"
line-length = 110
src = ["environments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["environments"]
python_files = ["*_test.py"]
addopts = "-q"
filterwarnings = [
    "ignore:ast.Str is deprecated:DeprecationWarning"
]
