[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers"
version = "0.2.3"
description = "Security Verifiers monorepo: shared tooling config (no runtime)."
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "pydantic>=2",
    "python-dotenv>=1.1.1",
    "verifiers>=0.1.9",
    "wandb>=0.22.2",
    "weave>=0.52.10",
]
[project.scripts]
svbench_report = "bench.report:main"

[tool.setuptools]
packages = ["bench"]

[tool.ruff]
target-version = "py312"
line-length = 110
src = ["environments"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["environments", "scripts"]
python_files = ["*_test.py"]
addopts = "-q"
filterwarnings = [
    "ignore:ast.Str is deprecated:DeprecationWarning",
    # Suppress warnings from Weave's dependencies
    "ignore:.*sentry_sdk.Hub.*is deprecated:DeprecationWarning",
    "ignore:.*Scope.user.*setter is deprecated:DeprecationWarning",
    "ignore:.*variable_values and operation_name arguments.*:DeprecationWarning",
    "ignore:.*Accessing the 'model_fields' attribute on the instance is deprecated:DeprecationWarning"
]
