[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers-code-exec-safety"
version = "0.0.0"
description = "Security Verifiers environment: Code Execution Safety (placeholder)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

