[project]
name = "sv-env-config-verification"
description = "Security Verifiers environment: Security Policy Verification for Configurations (MultiTurnEnv)"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.0",
    "datasets>=2.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "configparser>=5.3.0"
]

[project.entry-points."verifiers.environments"]
sv-env-config-verification = "sv_env_config_verification:load_environment"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sv_env_config_verification.py", "sv_env_config_verification_test.py"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
