[project]
name = "sv-netlogs-judge"
description = "RL Security Verifiers: Network Logs Judge Reward Variant"
tags = [
  "intertwine",
  "security-verifiers",
  "security",
  "cybersecurity",
  "single-turn",
  "network-security",
  "anomaly-detection",
  "logs",
  "classification",
  "judge",
  "train",
  "eval",
]
version = "0.2.17"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.9",
    "security-verifiers-utils>=0.3.1",
]

[project.entry-points."verifiers.environments"]
sv-netlogs-judge = "sv_netlogs_judge:load_environment"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "sv_netlogs_judge.py",
  "sv_env_network_logs_judge.py",
  "sv_netlogs_judge_test.py",
]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["."]

[tool.ruff]
line-length = 120
