[project]
name = "sv-env-network-logs"
description = "RL Security Verifiers: Anomaly Detection in Network Logs"
tags = [
  "intertwine",
  "security-verifiers",
  "security",
  "cybersecurity",
  "single-turn",
  "network-security",
  "anomaly-detection",
  "logs",
  "classification",
  "train",
  "eval",
]
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.4",
    "security-verifiers-utils>=0.1.0",
]

[project.entry-points."verifiers.environments"]
sv-env-network-logs = "sv_env_network_logs:load_environment"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sv_env_network_logs.py", "sv_env_network_logs_test.py"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["."]

[tool.ruff]
line-length = 120
