[project]
name = "sv-env-network-logs"
description = "RL Security Verifiers: Anomaly Detection in Network Logs"
tags = [
  "intertwine",
  "security-verifiers",
  "security",
  "cybersecurity",
  "single-turn",
  "network-security",
  "anomaly-detection",
  "logs",
  "classification",
  "train",
  "eval",
]
version = "0.2.9"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.6.post0",
    "security-verifiers-utils>=0.2.1",  # v0.2.0+ includes parser and dataset loader fixes
]

[project.entry-points."verifiers.environments"]
sv-env-network-logs = "sv_env_network_logs:load_environment"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sv_env_network_logs.py", "sv_env_network_logs_test.py"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["."]

[tool.ruff]
line-length = 120
