[project]
name = "sv-env-phishing-detection"
description = "Security Verifiers environment: Phishing Email Detection (SingleTurnEnv)"
tags = [
  "intertwine",
  "security-verifiers",
  "security",
  "cybersecurity",
  "single-turn",
  "phishing",
  "email-security",
  "social-engineering",
  "classification",
  "train",
  "eval",
]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "verifiers>=0.1.2",
  "datasets>=2.0.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "nltk>=3.8.0",
]

[project.entry-points."verifiers.environments"]
sv-env-phishing-detection = "sv_env_phishing_detection:load_environment"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.12.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["sv_env_phishing_detection.py", "sv_env_phishing_detection_test.py"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["."]

[tool.ruff]
line-length = 120
