[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers-prompt-injection"
version = "0.0.0"
description = "Security Verifiers environment: Prompt Injection (placeholder)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

