[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers-redteam-defense"
version = "0.1.0"
description = "Security Verifiers environment: Interactive Red-Teaming for Model Safety Alignment (MultiTurnEnv)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.0",
    "datasets>=2.0.0",
    "pandas>=2.0.0",
    "transformers>=4.30.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.entry-points."vf.env"]
sv-env-redteam-defense = "sv_env_redteam_defense:load_environment"

[tool.setuptools]
py-modules = ["sv_env_redteam_defense"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"
