[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-verifiers-secrets-leakage"
version = "0.0.0"
description = "Security Verifiers environment: Secrets Leakage (placeholder)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

